regression in tycho